2009-06-15 - Sean Huber (shuber@huberry.com)
  * Tree accepts an array of order options

2009-06-14 - Sean Huber (shuber@huberry.com)
  * Update Nestable interface logic
  * Update README
  * Add tree tests
  * Add basic set theory (uses all of the tree theory logic)
  * Add methods that need to be overwritten to set
  * Tree ensures parent exists in the nestable scope
  * Refactor Tree included logic
  * Refactor interface logic
  * Add #{association}_ids methods
  * Update documentation
  * Update set tests
  * Tree#nestable_scope uses an anonymous scope instead of an array of conditions
  * Only set :conditions on nestable_scope if there are any :scopes

2009-06-13 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add Nestable::Tree logic
  * Rename :foreign_key option to :parent_column
  * Update test_helper
  * Add nestable tests
  * Rename validate_nestable_options to process_options!
  * Add Nestable::Interface
  * Use NotImplementedError instead of defining our own
  * Update README